# AviasalesBotAdminPanel

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  start_server.sh
aviasales_bot_admin/: config.py  main.py  wsgi.py
aviasales_bot_admin/bot/: app.py  database.py  flight_directions_repo.py  models.py  users_repo.py  views.py
aviasales_bot_admin/bot/templates/: flight_directions.html  js_scripts.html  users.html
