[tool.poetry]
name = "aviasales-bot-admin"
version = "0.1.0"
description = ""
authors = ["Слепцов Денис Сергеевич <d.sleptsov@mashtab.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
sqlmodel = "^0.0.12"
load-dotenv = "^0.1.0"
uvicorn = "^0.24.0.post1"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
