[tool.poetry]
name = "aviasales-bot-admin"
version = "0.1.0"
description = ""
authors = ["Слепцов Денис Сергеевич <d.sleptsov@mashtab.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
fastapi = "^0.104.1"
sqlmodel = "^0.0.12"
load-dotenv = "^0.1.0"
uvicorn = "^0.24.0.post1"
asyncmy = "^0.2.8"
pyyaml = "^6.0.1"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
flake8 = "==6.0.*"
black = "==22.*"
isort = "^5.12.0"
mypy = "^1.7.0"
pre-commit = "==3.1.*"
types-pyyaml = "^6.0.12.12"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
